# Evolution-IDE

./: .gitattributes  CMakeLists.txt  ChangeLog  Delegate.cpp  Delegate.h  DependencyInstaller.cpp  DependencyInstaller.h  EnvironmentSettings.h  README.md  commandlineexecutor.cpp  commandlineexecutor.h  compiledock.cpp  compiledock.h  consoledock.cpp  consoledock.h  customtabstyle.h  filedock.cpp  fileexplorer.cpp  filemanager.cpp  filemanager.h  findreplace.cpp  findreplace.h  highlighter.cpp  highlighter.h  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  plaintextedit.cpp  plaintextedit.h  qconsole.cpp  resources.qrc  settingswindow.cpp  settingswindow.h  stylesheet.qss  tab.cpp  tab.h
Clang/: ClangBridge.cpp  ClangBridge.h  indexer.cpp  indexer.h  parser.cpp  parser.h
Debugger/: DebugWatchDock.cpp  DebugWatchDock.h  DebuggerDock.cpp  DebuggerDock.h  debuggerdock.cpp  debuggerdock.h  debuggerwidget.cpp  debuggerwidget.h  lldbBridge.cpp  lldbBridge.h  lldbbridge.cpp  lldbbridge.h  lldbbridge.py
Plugins/: CatchUnitTest.cpp  CatchUnitTest.h
Qt-Frameless-Window-DarkStyle/darkstyle/: darkstyle.qss
UCITEL/: ucitel_info.txt
Web/Evolution/: index.html
Web/Evolution/assets/css/: style.css
Widgets/BinaryInfo/: binaryinfo.cpp  binaryinfo.h  binaryview.cpp  binaryview.h
Widgets/CodeInfoDock/: CodeInfoDock.cpp  CodeInfoDock.h  LinterDock.cpp  LinterDock.h  RefactoringDock.cpp  RefactoringDock.h
Widgets/CommentTagsReminder/: CommentTagsReminder.cpp  CommentTagsReminder.h
Widgets/CompilationFlags/: CompilationFlags.cpp  CompilationFlags.h
Widgets/ConsoleDock/: consoledock.cpp  consoledock.h  findreplace.cpp  findreplace.h
Widgets/Converter/: converter.cpp  converter.h
Widgets/DocumentationHelper/: DocumentationHelper.cpp  DocumentationHelper.h
Widgets/Education/: CodeSamples.cpp  CodeSamples.h  Education.cpp  Education.h  NewSampleWindow.cpp  NewSampleWindow.h
Widgets/FileDock/: filedock.cpp  filedock.h
Widgets/FileExplorer/: NewWindow.cpp  NewWindow.h  SourceTemplates.h  fileexplorer.cpp  fileexplorer.h
Widgets/FindReplace/: findreplace.cpp  findreplace.h
Widgets/Fuzzing/: FuzzerInterface.cpp  FuzzerInterface.h
Widgets/Git/: GitDock.cpp  GitDock.h  gitbridge.cpp  gitbridge.h
Widgets/HexView/: hexview.cpp  hexview.h
Widgets/NodeView/: Connection.cpp  Connection.h  ConnectionPainter.cpp  ConnectionPainter.h  ElementsList.cpp  ElementsList.h  Node.cpp  Node.h  NodePainter.cpp  NodePainter.h  NodeScene.cpp  NodeScene.h  NodeView.cpp  NodeView.h  StructureTree.cpp  StructureTree.h  TextNodeRelationManager.cpp  TextNodeRelationManager.h
Widgets/Notifier/: ContactDeveloper.cpp  ContactDeveloper.h  HelpIDEMessage.cpp  HelpIDEMessage.h  SmtpMailNotifier.cpp  SmtpMailNotifier.h
Widgets/PlainTextEdit/: CommentTagList.cpp  CommentTagList.h  GoToLineColumn.cpp  GoToLineColumn.h  HoverInfo.cpp  HoverInfo.h  HoverInfoWidget.cpp  HoverInfoWidget.h  InformativeMessage.cpp  InformativeMessage.h  InvitationScreen.cpp  InvitationScreen.h  PlainTextEditExtra.cpp  PlainTextEditExtra.h  ScrollBarMap.cpp  ScrollBarMap.h  SmallRoundedEdit.cpp  SmallRoundedEdit.h  SpellCheckList.cpp  SpellCheckList.h  completer.cpp  completer.h  plaintextedit.cpp  plaintextedit.h
Widgets/ProcessDataPlot/: ProcessDataPlot.cpp  ProcessDataPlot.h
Widgets/ProgressBar/: ProgressBar.cpp  ProgressBar.h
Widgets/SearchBox/: SearchBox.cpp  SearchBox.h
Widgets/Settings/: settingswindow.cpp  settingswindow.h
Widgets/Settings/Appearence/: AppearenceWidget.cpp  AppearenceWidget.h
Widgets/Settings/ClangFormat/: ClangFormat.cpp  ClangFormat.h
Widgets/Settings/CmakeGenerator/: cmagegeneratorwidget.cpp  cmagegeneratorwidget.h  cmakegenerator.cpp  cmakegenerator.h  cmakegeneratorwidget.cpp  cmakegeneratorwidget.h
Widgets/Settings/Debugger/: DebuggerSettings.cpp  DebuggerSettings.h
Widgets/Settings/Installer/: Installer.cpp  Installer.h
Widgets/Settings/git/: gitbridge.cpp  gitbridge.h  gitwidget.cpp  gitwidget.h
Widgets/Tab/: tab.cpp  tab.h
Widgets/UnitTesting/: CatchUnitTest.h  ErrorCodeList.cpp  ErrorCodeList.h
clangd/: CompletionModel.h  Features.inc  ParsedAST.cpp
highlights/: languages.xml
icons/: IconFactory.cpp  IconFactory.h  iconfactory.cpp  iconfactory.h
include/clang/AST/: AttrImpl.inc  AttrTextNodeDump.inc  AttrVisitor.inc  Attrs.inc
include/clang/Basic/: AttrHasAttributeImpl.inc  AttrList.inc  DiagnosticDriverKinds.inc  DiagnosticGroups.inc  DiagnosticIndexName.inc  DiagnosticLexKinds.inc  DiagnosticParseKinds.inc  DiagnosticSemaKinds.inc  arm_neon.inc
include/clang/Driver/: Options.inc
include/clang/Sema/: AttrParsedAttrImpl.inc  AttrParsedAttrKinds.inc  AttrParsedAttrList.inc  AttrSpellingListIndex.inc  AttrTemplateInstantiate.inc
include/clang/Serialization/: AttrPCHRead.inc  AttrPCHWrite.inc
include/lldb/Host/: Config.h
include/llvm/Config/: llvm-config.h
include/llvm/Frontend/OpenACC/: ACC.cpp.inc
include/llvm/IR/: IntrinsicEnums.inc  IntrinsicImpl.inc  IntrinsicsPowerPC.h  IntrinsicsR600.h  IntrinsicsRISCV.h  IntrinsicsS390.h  IntrinsicsWebAssembly.h  IntrinsicsX86.h  IntrinsicsXCore.h
include/llvm/Support/: VCSRevision.h
include/mlir/Conversion/: Passes.h.inc
include/mlir/Dialect/GPU/: GPUOps.cpp.inc  GPUOps.h.inc  GPUOpsDialect.h.inc  ParallelLoopMapperAttr.cpp.inc  ParallelLoopMapperAttr.h.inc
include/mlir/Dialect/LLVMIR/: LLVMConversions.inc  LLVMOps.cpp.inc  LLVMOps.h.inc  ROCDLConversions.inc
include/mlir/Dialect/Linalg/: Passes.h.inc
include/mlir/Dialect/OpenACC/: OpenACCOps.cpp.inc  OpenACCOps.h.inc
include/mlir/Dialect/OpenMP/: OmpCommon.td  OpenMPOps.cpp.inc  OpenMPOps.h.inc
include/mlir/Dialect/SCF/: SCFOps.cpp.inc  SCFOps.h.inc
include/mlir/Dialect/SPIRV/: SPIRVEnums.cpp.inc  SPIRVEnums.h.inc  SPIRVOpAvailabilityImpl.inc  SPIRVOps.cpp.inc  (+4 more)
include/mlir/IR/: SymbolInterfaces.cpp.inc  SymbolInterfaces.h.inc
include/mlir/Interfaces/: CallInterfaces.cpp.inc  CallInterfaces.h.inc
include/mlir/Reducer/: Passes.h.inc
libs/: README.txt
llvm/: llvmbridge.cpp  llvmbridge.h
stylesheets/: Combinear.qss
(+20 files in other folders)
